# lovecase

./: .gitignore  CMakeLists.txt  README.md
data/: evidence.flac  lovecase.desktop  menu.flac  music.flac  net.dosowisko.lovecase.appdata.xml
data/icons/: icon.rc  lovecase.icns
data/scripts/: 000-intro.sd  001-blondie.sd  001-park.sd  002-beach.sd  003-molo.sd  004-outro.sd
data/sprites/alley/: scene.ini
data/sprites/blank/: scene.ini
data/sprites/molo/: scene.ini
data/sprites/park/: scene.ini
flatpak/: net.dosowisko.lovecase.json
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  dispatcher.c  dosowisko.c  menu.c  script.c
